--- a/templates/language.html
+++ b/templates/language.html
@@ -30,15 +30,15 @@
   <div class="ycbottombar">
     <div class="row">
       <div class="col-md-2">
-        <button class="ycb" id="previous">
+        <a class="ycb" href="/language/{{language['prev']}}">
           <i class="arrow left"></i>Language prev
-        </button>
+        </a>
       </div>
       <div class="col-md-8 ycmidsmall"></div>
       <div class="col-md-2">
-        <button class="ycb" id="next">
+        <a class="ycb" href="/language/{{language['next']}}">
           Language next<i class="arrow right"></i>
-        </button>
+        </a>
       </div>
     </div>
   </div>
