--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,53 +7,32 @@
     <link rel="icon" href="data:," />
 
     <!-- jquery -->
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+    <script src="{{url_for('static', filename='jquery.min.js')}}"></script>
+
     <link
       rel="stylesheet"
-      href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+      href="{{url_for('static', filename='layout.css')}}"
     />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-    />
-
-    <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}" />
-
-    <title>Language Learner</title>
+    <title>{% block title %}Language Learner{% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light ycnavbg">
-      <div class="container">
-        <a class="navbar-brand nice_font" href="/">Language Learner</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link nice_font" href="/language/korean">Learn</a>
-          </div>
-
-          <!-- <div class="navbar-nav">
-            <a class="nav-link nice_font" id="quiz_button" href="/quiz/all"
-              >Quiz</a
-            >
-          </div> -->
+    <nav id="nav" tabindex="1">
+      <div id="nav-container">
+        <img
+          id="nav-logo"
+          tabindex="2"
+          src="{{url_for('static', filename='images/logo.png')}}"
+        />
+        <div id="nav-links">
+          <a id="nav-learning" tabindex="3">Learning</a>
+          <a id="nav-quiz" tabindex="4">Quiz</a>
         </div>
       </div>
     </nav>
 
-    <div class="container">{% block content %} {% endblock %}</div>
+    <div id="page_container">{% block content %} {% endblock %}</div>
   </body>
+
+  <script src="{{url_for('static', filename='function.js')}}"></script>
 </html>
