--- a/templates/main.html
+++ b/templates/main.html
@@ -19,7 +19,14 @@ block content %}
     </div>
 
     <div id="button-container">
-      <button id="korean-button" tabindex="6">Learn Korean</button>
+      <a
+        href="/learn/korean"
+        onclick="() => window.location = '/learn/korean'"
+        id="korean-button"
+        tabindex="6"
+      >
+        Learn Korean
+      </a>
     </div>
   </div>
 </div>
