--- a/templates/main.html
+++ b/templates/main.html
@@ -22,7 +22,7 @@ block content %}
       <a
         href="/learn/korean"
         onclick="() => window.location = '/learn/korean'"
-        id="korean-button"
+        id="learn-button"
         tabindex="6"
       >
         Learn Korean
