--- a/templates/learn.html
+++ b/templates/learn.html
@@ -56,10 +56,10 @@ block content %}
       </div>
       <div id="sentence-2" class="sentence" tabindex="29">
         <div id="english-sentence-2" class="english" tabindex="30">
-          i love you but i'm very hungry (informal)
+          It was nice to meet you, good bye
         </div>
         <div id="korean-sentence-2" class="korean" tabindex="31">
-          사랑하는데, 나 지금 너무 배고파
+          만나서 반가웠어요, 안녕히 가세요
         </div>
       </div>
       <div id="sentence-3" class="sentence" tabindex="32">
